--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@trpc/next": "^10.0.0",
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
+    "dayjs": "^1.11.8",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
     "next-themes": "^0.2.1",
@@ -26,6 +27,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-toastify": "^9.1.3",
+    "slugify": "^1.6.6",
     "superjson": "1.9.1",
     "zod": "^3.18.0"
   },
