--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@hookform/resolvers": "^3.1.1",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.5.0",
+    "@supabase/supabase-js": "^2.26.0",
     "@tanstack/react-query": "^4.16.0",
     "@trpc/client": "^10.0.0",
     "@trpc/next": "^10.0.0",
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
+    "base64-arraybuffer": "^1.0.2",
     "dayjs": "^1.11.8",
+    "mime-types": "^2.1.35",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
     "next-themes": "^0.2.1",
@@ -33,6 +36,7 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@types/mime-types": "^2.1.1",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
