--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-toastify": "^9.1.3",
     "slugify": "^1.6.6",
     "superjson": "1.9.1",
+    "unsplash-js": "^7.0.18",
     "zod": "^3.18.0"
   },
   "devDependencies": {
