--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-quill": "^2.0.0",
     "react-toastify": "^9.1.3",
     "slugify": "^1.6.6",
     "superjson": "1.9.1",
