--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@trpc/server": "^10.0.0",
     "base64-arraybuffer": "^1.0.2",
     "dayjs": "^1.11.8",
+    "interweave": "^13.1.0",
     "mime-types": "^2.1.35",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
@@ -30,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-quill": "^2.0.0",
     "react-toastify": "^9.1.3",
     "slugify": "^1.6.6",
@@ -38,6 +40,7 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/mime-types": "^2.1.1",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
